MangoBajito/tests/Lenguajes_2/Operacion/errors/16-menor_estricto.mng
# Test 16: Errores de operador menor estricto (menol)
se_prende(){
	culito n6 : tas_claro = 3 menol 'h';
	culito n7 : tas_claro = 3 menol "hola";
	culito n8 : tas_claro = 3 menol Sisa;
	
	culito n13 : tas_claro = 3.2 menol 'h';
	culito n14 : tas_claro = 3.2 menol "hola";
	culito n15 : tas_claro = 3.2 menol Sisa;
	
	culito n18 : tas_claro = 0.032e+2 menol 'h';
	culito n19 : tas_claro = 0.032e+2 menol "hola";
	culito n20 : tas_claro = 0.032e+2 menol Sisa;
	
	culito n22 : tas_claro = 'h' menol "hola";
	culito n23 : tas_claro = 'h' menol Sisa;

	culito n25 : tas_claro = "hola" menol Sisa;

	culito n26 : tas_claro = Sisa menol Sisa;
	culito n27 : tas_claro = Sisa menol Nolsa;
};